# streamlit-capsules

./: .gitignore  README.md  demo.py  pyproject.toml
streamlit_capsules/: __init__.py
streamlit_capsules/frontend/: package-lock.json  package.json
streamlit_capsules/frontend/public/: index.html  styles.css
streamlit_capsules/frontend/src/: index.tsx
