[tool.poetry]
name = "streamlit-capsules"
version = "0.5.1"
description = "💊 A Streamlit component to show clickable capsules/pills"
authors = ["Johannes Rieke <johannes.rieke@gmail.com>"]
license = "MIT"
readme = "README.md"
# This is required so the frontend code is properly included in the wheel. 
include = ["streamlit_capsules/frontend/build/**/*"]

[tool.poetry.dependencies]
python = ">=3.8"
streamlit = "^1.45.1"

[tool.poetry.dev-dependencies]
watchdog = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
